--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,12 @@ cmake_minimum_required(VERSION 3.12)
 
 ##############################
 ### If using pico-lcd-base...
-include(pico_sdk_import.cmake)
-set(PICO_BOARD pico) #...or pico_w if you need it
-project(basicvm)
-pico_sdk_init()
+#include(pico_sdk_import.cmake)
+#set(PICO_BOARD pico) #...or pico_w if you need it
+#project(basicvm)
+#pico_sdk_init()
 ### or, If NOT using pico-lcd-base...
-#project(BasicVM)
+project(BasicVM)
 ##############################
 
 
@@ -38,32 +38,32 @@ add_definitions( -DDEBUG_OP )
 
 ##############################
 ### If using pico-lcd-base...
-add_definitions( -DPICO_LCD_BASE )
-add_library(pico_lcd_base STATIC IMPORTED)
-### Set path to your static lib of pico_lcd_base and the include path
-set_target_properties(
-    pico_lcd_base
-    PROPERTIES
-    IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/../pico-lcd-base/build/libpico_lcd_base.a"
-    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/../pico-lcd-base/include"
-)
-pico_enable_stdio_usb(basicvm 1)
-pico_enable_stdio_uart(basicvm 1)
-pico_add_extra_outputs(basicvm)
-target_link_libraries(
-    basicvm 
-    pico_lcd_base 
-    pico_stdlib 
-    pico_time 
-    hardware_timer 
-    hardware_pwm 
-    hardware_i2c 
-    hardware_spi 
-    hardware_adc
-)
+# add_definitions( -DPICO_LCD_BASE )
+# add_library(pico_lcd_base STATIC IMPORTED)
+# ### Set path to your static lib of pico_lcd_base and the include path
+# set_target_properties(
+#     pico_lcd_base
+#     PROPERTIES
+#     IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/../pico-lcd-base/build/libpico_lcd_base.a"
+#     INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/../pico-lcd-base/include"
+# )
+# pico_enable_stdio_usb(basicvm 1)
+# pico_enable_stdio_uart(basicvm 1)
+# pico_add_extra_outputs(basicvm)
+# target_link_libraries(
+#     basicvm 
+#     pico_lcd_base 
+#     pico_stdlib 
+#     pico_time 
+#     hardware_timer 
+#     hardware_pwm 
+#     hardware_i2c 
+#     hardware_spi 
+#     hardware_adc
+# )
 ##############################
 ### If not...
-#target_link_libraries(basicvm)
+target_link_libraries(basicvm)
 ##############################
 
 
